Creación de la página People referente a validaciones, cambios totales hechos dentro de la página para crear los datos solicitados.

--- a/TallerFinal/TallerFinal1Web/Paginas/Menu.html
+++ b/TallerFinal/TallerFinal1Web/Paginas/Menu.html
@@ -17,6 +17,7 @@
                     <a class="dropdown-item" href="Pagina1.html">Pagina 1</a>
                     <a class="dropdown-item" href="Pagina2.html">Pagina 2</a>
                     <a class="dropdown-item" href="PaginaBase.html">Pagina Base</a>
+                    <a class="dropdown-item" href="People.html">People</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -27,6 +28,7 @@
                     <a class="dropdown-item" href="Cliente.html">Clientes</a>
                     <a class="dropdown-item" href="Cliente_Funcion.html">Clientes - Función</a>
                     <a class="dropdown-item" href="Pais.html">Paises</a>
+                    
                 </div>
             </li>
             <li class="nav-item dropdown">
